# webrtc-from-scratch

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  __init__.py  ber_decoder_test.py  ber_encoder_test.py  cer_decoder_test.py  cer_encoder_test.py  certificate.der  certificate.key  certificate.pem  der_decoder_test.py  der_encoder_test.py  docker-compose.yml  dtls_client_header.py  dtls_record_test.py  dtls_test.py  examples_fastapi.py  examples_ice.py  examples_remote_desc.py  examples_webrtc.py  examples_ws.py  gen_stun.py  go.mod  main.py  peer_connection.py  pyproject.toml  requirements.txt  session_description.py  session_description_populate.py  signaling.py  test.ber  test.go  test.pem  test.py  test2.py  (+8 more)
builder/: Cargo.toml
builder/src/: main.rs
dtls/: __init__.py  certificate.py  dtlstransport.py
examples/: Makefile  README.md  output.ivf  pyproject.toml  serve.py
examples/examples/: dtls_client_server.py  dtls_native.py  examples_ws.py  serve.py  starlett_server.py  ws.py
examples/src/examples/: __init__.py
ice/: __init__.py  agent.py  candidate_base.py  stun.py  stun_message.py  utils.py
ice/net/: __init__.py  interface.py  types.py  udp_mux.py
ice/stun/: __init__.py  attr.py  message.py  message_type.py  utils.py
media/: __init__.py  packetizer.py  types.py  vp8_payloader.py
rust/: Cargo.toml
rust/dtls/: Cargo.toml
rust/dtls/examples/listen/selfsign/: listen_selfsign.rs
rust/dtls/src/: error.rs  listener.rs
rust/dtls/src/conn/: mod.rs
rust/dtls/src/crypto/: mod.rs
rust/dtls/src/extension/: extension_use_srtp.rs
rust/src/: error.rs  lib.rs
rust/src/cipher_suite/: cipher_suite_aes_128_gcm_sha256.rs  mod.rs
rust/src/crypto/: crypto_gcm.rs  mod.rs
rust/src/curve/: mod.rs
rust/src/prf/: mod.rs
rust/srtp/src/: stream.rs
rust/srtp/src/session/: mod.rs
rust/util/src/conn/: conn_bridge.rs  conn_pipe.rs  conn_udp.rs  conn_udp_listener_test.rs  mod.rs
src/: main.rs
src/native/: __init__.py  __init__.pyi
src/tests/: testutils.py
src/webrtc/: __init__.py  peer_connection.py  peer_connection_types.py  signaling.py  transceiver.py
src/webrtc/dtls/: __init__.py  certificate.py  conn.py  dtls_cipher_suite.py  dtls_record.py  dtls_record_factory.py  dtlstransport.py  flight0.py  flight1.py  flight3.py  flight4.py  flight5.py  flight6.py  flight_state.py  fsm.py  gcm.py  gcm_test.py  x509.py
src/webrtc/dtls/pyasn1/: README.md  base.py  base_test_case.py  ber_decoder.py  ber_encoder.py  cer_decoder.py  cer_encoder.py  char.py  constraint.py  debug.py  der_decoder.py  der_encoder.py  eoo.py  error.py  integer.py  namedtype.py  namedval.py  opentype.py  streaming.py  tag.py  tagmap.py  univ.py  useful.py
src/webrtc/ice/: agent.py  stun_message.py
src/webrtc/ice/stun/: README.md  utils.py
src/webrtc/media/: packetizer.py  rtp.py  rtp_packet.py  types.py  vp8_payloader.py
utils/: __init__.py  event_emitter.py
web/: package-lock.json  package.json
web/src/: App.svelte
webrtc/: peer_connection.py  session_description.py  session_description_populate.py  transceiver.py
webrtc/dtls/: __init__.py  certificate.py  dtls_cipher_suite.py  dtls_record_factory.py  dtls_typing.py  dtlstransport.py  flight1.py  flight2.py  flight3.py  flight4.py  flight_state.py
webrtc/ice/: __init__.py  agent.py  candidate_base.py
webrtc/ice/net/: __init__.py  types.py  udp_mux.py
webrtc/ice/stun/: message.py  utils.py
webrtc/media/: __init__.py  ivf.py  jitterbuffer.py  rtcp.py  rtp_extensions.py  rtp_packet.py  y4m.py
webrtc/utils/: __init__.py  event_emitter.py  ntp.py  types.py
