[project]
name = "webrtc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "maturin>=1.8.3",
]

[tool.uv]
# cache-keys = [
#     {file = "pyproject.toml"},
#     {file = "rust/Cargo.toml"},
#     {file = "**/*.rs"},
# ]
config-settings = { build-args = '--profile=dev' }

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "native"
manifest-path = "rust/Cargo.toml"
bindings = "pyo3"
features = ["pyo3/extension-module"]
python-packages = ["webrtc", "native"]
python-source = "src"
