[project]
name = "webrtc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "maturin>=1.8.3",
    "webrtc_rs",
    "eventloop",
]

[tool.uv.workspace]
members = [
    "packages/*",
]

[tool.uv.sources]
webrtc_rs = { workspace = true }
eventloop = { workspace = true }

[tool.uv]
config-settings = { build-args = '--profile=dev' }

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["webrtc*", "packages*"]

[tool.maturin]
module-name = "native"
manifest-path = "rust/Cargo.toml"
bindings = "pyo3"
features = ["pyo3/extension-module"]
python-packages = ["webrtc", "native"]
python-source = "src"
