[tool.poetry]
name = "examples"
version = "0.1.0"
description = ""
authors = ["romashorodok <108732029+romashorodok@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
webrtc = { path = "./..", develop = true }
fastapi = "^0.115.5"
gunicorn = "^23.0.0"
uvicorn = "^0.32.0"
hypercorn = {extras = ["trio"], version = "^0.17.3"}
starlette = "^0.41.3"
watchfiles = "^1.0.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
