[project]
name = "examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "romashorodok", email = "108732029+romashorodok@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
examples = "examples:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
