[project]
name = "examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "romashorodok", email = "108732029+romashorodok@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.2",
    "watchfiles>=1.0.5",
    "webrtc",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
webrtc = { path = "../", editable = true }
