[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "native"
crate-type = ["cdylib"]

[dependencies]
bytes = "1"
pyo3 = { version = "0.23.3", features = ["experimental-async"]}
webrtc_dtls = { version = "0.11.0", path = "./dtls", package = "webrtc-dtls", features = ["pem"] }
webrtc_srtp = { version = "0.14.0", path = "./srtp", package = "webrtc-srtp"}
webrtc_rtp = { version = "0.12.0", path = "./rtp", package = "rtp"}
webrtc_util = { version = "0.10.0", path = "./util", package = "webrtc-util"}
tokio = { version = "1.32.0", features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
    "parking_lot",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
pyo3-async-runtimes = { version = "0.23", features = ["attributes", "tokio-runtime"] }

